# ml-pipeline

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  data_preparation.py  docker-compose.yaml  entrypoint.sh  model_config.py  model_core.py  model_monitoring.py  predict_serve_type.py  pyproject.toml  requirements.txt  serve.py  serve_type.py  to_do  train_serve.py
.github/workflows/: github-actions-demo.yml
config/: ml_dag_config.py
dags/: monitor_dag.py  predict_dag.py  simple_dag.py  train_dag.py
data/: solar-predict.parquet
docker/: Dockerfile.airflow  Dockerfile.mlflow  Dockerfile.monitor
env_files/: airflow.env  mlflow.env  mlflow.postgres.env  monitor.env
infra/: start_mlflow.sh
scripts/: data_func.py  data_preparation.py  model_core.py  model_func.py
scripts/config/: ml_dag_config.py  model_config.yml
scripts/infra/: start_mlflow.sh  start_monitor.sh
test/: test_serve.py
