[tool.poetry]
name = "dexter-energy"
version = "0.1.0"
description = ""
authors = ["A Havriushenko"]
license = "MIT"
readme = "README.md"
packages = [{include = "dexter_energy"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^2.0.3"
numpy = "^1.25.1"
fastapi = "^0.100.0"
pytest = "^7.4.0"
requests = "^2.31.0"
apache-airflow = "^2.6.3"
scikit-learn = "^1.3.0"
pyarrow = "^12.0.1"
fastparquet = "^2023.7.0"
mlflow = "^2.5.0"
gcsfs = "^2023.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
